--- a/package.json
+++ b/package.json
@@ -25,33 +25,33 @@
   },
   "homepage": "https://github.com/UniversityOfHelsinkiCS/jami#readme",
   "devDependencies": {
-    "@eslint/js": "9.14.0",
-    "@types/express": "4.17.21",
-    "@types/morgan": "1.9.9",
-    "@vitest/coverage-v8": "2.1.5",
-    "eslint": "9.14.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.3",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-prettier": "5.2.1",
-    "globals": "15.12.0",
+    "@eslint/js": "^9.14.0",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@vitest/coverage-v8": "^2.1.5",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
     "prettier": "3.4.2",
-    "tsx": "4.7.3",
-    "typescript": "5.3.3",
-    "typescript-eslint": "8.14.0",
-    "vitest": "2.1.5"
+    "tsx": "^4.7.3",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.14.0",
+    "vitest": "^2.1.5"
   },
   "dependencies": {
-    "@sentry/node": "8.38.0",
-    "@sentry/profiling-node": "8.38.0",
-    "axios": "1.6.8",
-    "dotenv": "16.0.3",
-    "express": "4.21.1",
-    "morgan": "1.10.0",
-    "pg": "8.8.0",
-    "sequelize": "6.28.0",
-    "umzug": "3.2.1",
-    "winston": "3.8.2",
-    "winston-loki": "6.1.3"
+    "@sentry/node": "^8.38.0",
+    "@sentry/profiling-node": "^8.38.0",
+    "axios": "^1.6.8",
+    "dotenv": "^16.0.3",
+    "express": "^4.21.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.8.0",
+    "sequelize": "^6.28.0",
+    "umzug": "^3.2.1",
+    "winston": "^3.8.2",
+    "winston-loki": "^6.1.3"
   }
 }
